--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron": "~1.6.2"
   },
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "jquery.terminal": "^1.5.0"
   }
 }
